@@ -73,6 +73,7 @@ us a note on ns-developers mailing list.</p>
 <ul>
 <li>Nix-Vector routing supports topologies with multiple WiFi networks using the same WiFi channel object.</li>
 <li>ConfigStore does not save anymore OBSOLETE Attributes.</li>
+<li>The <b>Ipv4L3Protocol</b> Duplicate detection now accounts for transmitted packets, so a transmitting multicast node will not forward its own packets.</li>
 </ul>
 
 <hr>
